--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,10 +35,13 @@
     "with open(cached_response_path) as f:\n",
     "    data = json.load(f)[\"data\"]\n",
     "\n",
+    "# Docsumo gives tells us how confident it is in its predictions.\n",
+    "# Only use confident predictions\n",
+    "minimum_confidence = 0.8\n",
     "basic_information_dict = {\n",
     "    k: v['orig_value']\n",
     "    for k, v in data['Basic Information'].items()\n",
-    "    if v and v['confidence'] > 0.8 and k\n",
+    "    if v and v['confidence'] > minimum_confidence and k\n",
     "}\n",
     "\n",
     "# Docsumo creates a seperate list for each page of the PDF\n",
@@ -51,10 +54,10 @@
     "for row in raw_line_items:\n",
     "    for k, v in row.items():\n",
     "        if v[\"confidence\"] != 1.0:\n",
-    "            raise Exception('Docsumo had issue, is not sure about transaction data')\n",
+    "            raise Exception('Docsumo had issue, and is not sure about transaction data')\n",
     "\n",
     "\n",
-    "# strip out Docsumo meta data\n",
+    "# Strip out Docsumo meta data\n",
     "line_items = [{k: v[\"value\"] for k, v in item.items()} for item in raw_line_items]\n",
     "\n",
     "# Convert currency to Decimal\n",
@@ -63,11 +66,11 @@
     "        if item[header]:\n",
     "            item[header] = decimal.Decimal(str(item[header]))\n",
     "\n",
-    "# add an index, which we'll use to enrich data \n",
+    "# Add an index, which we'll use to enrich data \n",
     "for i, line_item in enumerate(line_items):\n",
     "    line_item[\"index\"] = i\n",
     "\n",
-    "# remove empty columns\n",
+    "# Remove empty columns\n",
     "for line_item in line_items:\n",
     "    del line_item['merchant']\n",
     "    del line_item['subcategory']\n",
@@ -79,7 +82,7 @@
     "    set(t['date'] for t in line_items if t['balance'] < decimal.Decimal('200.00'))\n",
     ")\n",
     "\n",
-    "# get average daily ending balance\n",
+    "# Get average daily ending balance\n",
     "daily_ending_balances = {t['date']: t['balance'] for t in line_items}\n",
     "\n",
     "average_balance = sum(daily_ending_balances.values()) / len(daily_ending_balances) \n"
@@ -87,9 +90,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Month       Credits    Debits\n",
+      "2018-04    10671.20   10671.00\n",
+      "2018-05     9934.06    9583.00\n",
+      "2018-06     2189.19    2196.60\n",
+      "2018-07     8234.41    8554.56\n",
+      "2018-08     7501.00    3540.00\n",
+      "2018-09    26451.63   23234.89\n",
+      "2018-10    68944.89   21062.61\n",
+      "2018-11      408.90   55479.00\n",
+      "2018-12    14380.33   14317.00\n",
+      "2019-01     5610.00    2607.60\n",
+      "2019-02     7567.34   10612.00\n",
+      "2019-03     7847.81    7859.00\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -115,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +364,7 @@
    ],
    "source": [
     "system_content = \"\"\"\n",
-    "Your job is to write a report regarding whether to make a loan to a load applicant.\n",
+    "Your job is to write a report regarding whether to make a loan to a loan applicant.\n",
     "You are only given information from a single bank statement. This is limiting and you will comment on how this is limiting,\n",
     "but you will still draw a conclusions.\n",
     "\n",
